@@ -15,6 +15,7 @@ Changes in ATK 5.3.1
 + Added getIcon/getIconPath methods to atkTreeNode to override icons
   more easily (without the need for creating a separate theme). [Peter]
 + Added atkGetSessionManager function. [Peter]
++ Added str_replace javascript function to ATK javascript tools. [Boy]
 * Sorting on atkManyToOneRelation columns now sorts on the actual value
   instead of on the id. [Ivo]
 * Moved addOnChangeHandler() to atkAttribute. [Boy]
